# laksh-gcs

./: .env.example  .gitignore  .vercelignore  DESIGN.md  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  page.tsx
app/api/reactor/health/: route.ts
app/api/reactor/pricing/: route.ts
app/api/reactor/token/: route.ts
components/: CommandBar.tsx  Controls.tsx  GcsViewport.tsx  ReactorDashboard.tsx  RightRail.tsx  Sidebar.tsx  StudioProvider.tsx  Viewport.tsx  VirtualJoysticks.tsx  icons.tsx
components/hud/: Alerts.tsx  Instruments.tsx  LinkQuality.tsx  Minimap.tsx  useFlight.ts
docs/research/: responsiveness-playbook.md  stress-test.md  world-consistency.md
lib/: scenes.ts
lib/laksh/: control.ts  flightModel.ts  scene.ts  seeds.ts
lib/reactor/: client.ts  runtime.ts  server.ts  types.ts
public/references/laksh/: manifest.json
scripts/: build-tauri.mjs
scripts/stress/: README.md  accuracy_seed.py  concurrency.py  connect_dist.py  gpu_lib.py  lib.mjs  main_session.py  token-latency.mjs
scripts/stress/results/: accuracy_seed.txt  concurrency.txt  connect_dist.txt  main_session.txt  smoke.txt  token-latency.txt
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
